--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,9 +5,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-suisse-intl: "Suisse Int'l", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -17,5 +18,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-suisse-intl);
 }
